# ubiquiti__lmm

./: .gitignore  ALEMBIC_SETUP.md  ALERTING_SYSTEM.md  ALERTING_SYSTEM_V2.md  API_ENDPOINTS.md  API_ENDPOINTS_COMPLETE.md  CLAUDE.md  Dockerfile  MIGRATION.md  README.md  README_ALERTING.md  alembic.ini  docker-compose.yml  migrate_db.py  pyproject.toml  run_migrations.py
.claude/agents/: git-commit-push.md  python-code-optimizer.md
.github/: DEPLOYMENT.md  SECRETS.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: d2f224889c86_add_recovery_notified_to_alert_events.py  d751d6eed01a_make_alert_event_id_nullable_in_post_.py
app/: __init__.py
app/config/: device_frequencies.py  logging_config.py  settings.py
app/utils/: __init__.py  dependencies.py  network_utils.py  patterns.py
app_fast_api/: __init__.py  main.py
app_fast_api/interfaces/: alerting_interfaces.py  ubiquiti_interfaces.py
app_fast_api/repositories/: __init__.py  alerting_repositories.py  feedback_repository.py  ubiquiti_repositories.py
app_fast_api/routes/: alerting_routes.py  analyze_station_routes.py  (+3 more)
mcp_server/: N8N_SETUP.md  README.md  __init__.py  claude_desktop_config.example.json  install.sh  pyproject.toml  server.py  server_http.py  start_n8n_server.sh  test_server.py
migrations/: README_recovery_notified.md  add_recovery_notified_column.sql
postman/: Device_Analysis_Complete.postman_collection.json
scripts/: analisis_aps_uisp.json  analisis_aps_uisp.xlsx  analyze_aps.py  create_noc_tasks.py  puntos_mejora_noc.md  run_noc_setup.py  test_diagnostic.py
(+46 files in other folders)
