[tool.poetry]
name = "ubiquiti-llm"
version = "0.1.0"
description = ""
authors = ["rhernandezbas <ronald.hernandezbastidas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
fastapi = "^0.128.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
openai = "^1.10.0"
python-multipart = "^0.0.6"
requests = "^2.32.5"
urllib3 = "^2.6.3"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
asyncssh = "^2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
